# spread_single_repo

./: .gitignore  Dockerfile  SpreadArchitecture  build_dockerfiles.sh  docker-compose.yml  package-lock.json  readme.md  run_dockerfiles.sh
.github/workflows/: docker-build-client-image.yml
browser-client/: package-lock.json  package.json
browser-client/src/: App.tsx  Canvas.module.css  Canvas.tsx  FindGame.tsx  Game.tsx  env.ts  foundGameResponse.ts  gameStorage.test.ts  gameStorage.ts  index.tsx  playerIdStorage.ts
browser-client/src/models/: bubble.ts  cell.ts  (+3 more)
client/: .env  .prettierrc  Dockerfile  Dockerfile.Production  package-lock.json  package.json  run_client.sh  run_client_prod_local.sh
client/src/: App.test.tsx  App.tsx  Routes.tsx  fileService.tsx  gameProvider.ts  index.tsx
integration_tests/: .env  Dockerfile  cleanup_integration_tests.sh  jest-puppeteer.config.js  jest.config.json  package-lock.json  package.json  run_integration_tests.sh  setup_integration_tests.sh
integration_tests/src/: dummy.e2e.test.ts  dummy_fail.e2e.test.ts  index.ts  single_player_game.e2e.test.ts  two_player_game.e2e.test.js  two_player_game.e2e.test.ts
matchmaker/: .env  Cargo.toml  main.py  matchmaker.py  readme.md
matchmaker/src/: game_finder.rs  main.rs  matchmaker.rs
server/: .env  Dockerfile  package-lock.json  package.json  run_server.sh  tsconfig.json
server/src/: app.ts  index.test.ts  index.ts
spread_game/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
spread_game/src/: index.ts  jest.config.ts
(+185 files in other folders)
